--- a/templates/timeWidget.html
+++ b/templates/timeWidget.html
@@ -10,12 +10,11 @@
         <col width={{ (widths[0] - widths[1]) / 5 }}>
         {% endfor %}
         <tr>
-        <td><div id="{{ date.name }}" class="date">{{ views.getViewState(date) }}</div></td>
-        <td><div id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</div></td>
+        <td><div id="{{ date.name.replace(".", "_") }}" class="date">{{ views.getViewState(date) }}</div></td>
+        <td><div id="{{ time.name.replace(".", "_") }}" class="time">{{ views.getViewState(time) }}</div></td>
         <td><div class=rlabel>Sunrise</div></td>
-        <td><div id="{{ sunrise.name }}" class="time">{{ views.getViewState(sunrise) }}</div></td>
+        <td><div id="{{ sunrise.name.replace(".", "_") }}" class="time">{{ views.getViewState(sunrise) }}</div></td>
         <td><div class=rlabel>Sunset</div></td>
-        <td><div id="{{ sunset.name }}" class="time">{{ views.getViewState(sunset) }}</div></td>
+        <td><div id="{{ sunset.name.replace(".", "_") }}" class="time">{{ views.getViewState(sunset) }}</div></td>
         </tr>
     </table>
-
