--- a/templates/weatherWidget.html
+++ b/templates/weatherWidget.html
@@ -12,16 +12,15 @@
         {% endfor %}
         <tr>
         <td><div class=label>Temperature</div></td>
-        <td><div id="{{ temp.name }}" class="tempF {{ temp.name }}">{{ views.getViewState(temp) }}</div></td>
+        <td><div id="{{ temp.name.replace(".", "_") }}" class="tempF {{ temp.name.replace(".", "_") }}">{{ views.getViewState(temp) }}</div></td>
         <td><div class=rlabel>Humidity</div></td>
-        <td><div id="{{ humidity.name }}" class=humidity>{{ views.getViewState(humidity) }}</div></td>
+        <td><div id="{{ humidity.name.replace(".", "_") }}" class=humidity>{{ views.getViewState(humidity) }}</div></td>
         <td><div class=rlabel>Barometer</div></td>
-        <td><div id="{{ barometer.name }}" class=barometer>{{ views.getViewState(barometer) }}</div></td>
+        <td><div id="{{ barometer.name.replace(".", "_") }}" class=barometer>{{ views.getViewState(barometer) }}</div></td>
         </tr>
         <tr>
         <td><div class=label>Wind</div></td>
-        <td><div id="{{ windSpeed.name }}" class=MPH>{{ views.getViewState(windSpeed) }}</div></td>
-        <td><div id="{{ windDir.name }}" class=Deg>{{ views.getViewState(windDir) }}</div></td>
+        <td><div id="{{ windSpeed.name.replace(".", "_") }}" class=MPH>{{ views.getViewState(windSpeed) }}</div></td>
+        <td><div id="{{ windDir.name.replace(".", "_") }}" class=Deg>{{ views.getViewState(windDir) }}</div></td>
         </tr>
     </table>
-
