Shadow text on panels

--- a/static/css/solar.css
+++ b/static/css/solar.css
@@ -60,8 +60,10 @@ body {
 
 .optimizerName {
 	color: White;
+    text-shadow: 1px 1px black;
     }
 
 .W {
 	color: White;
+    text-shadow: 1px 1px black;
     }
