--- a/templates/solar.html
+++ b/templates/solar.html
@@ -18,6 +18,8 @@
                         <span id="{{ time.name.replace(".", "_") }}" class="time">{{ views.getViewState(time) }}</span>
                         <span id="{{ ampm.name.replace(".", "_") }}" class="ampm">{{ views.getViewState(ampm) }}</span>
                     </div>
+                </div>
+                <div class="statsGroup">
                     <div>
                         <span class="label">Sunrise</span>
                         <span>{{ views.getViewState(sunrise) }}</span>
