--- a/templates/iphone.html
+++ b/templates/iphone.html
@@ -7,7 +7,7 @@
 <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='/css/phone.css'>
+    <link rel='stylesheet' type='text/css' href='/css/iphone.css'>
     <script src='/js/jquery.js'></script>
     <script src='/js/update.js'></script>
     <script>
