--- a/static/css/iphone.css
+++ b/static/css/iphone.css
@@ -60,7 +60,7 @@ td {
     }
 
 .link {
-    height: 32px;
+    height: 36px;
     width: 100px;
 	font-size: 18px;
     text-align: center;
@@ -69,14 +69,19 @@ td {
     }
 
 button {
-    font-size: 28px;
+    height: 32px;
+    width: 160px;
+    font-size: 18px;
     color: Black;
+    background-color: Gray;
+    margin: 4px;
     }
 
 input {
     height: 32px;
     width: 60px;
 	font-size: 18px;
+    background-color: Gray;
     margin-top: 4px;
     margin-bottom: 4px;
     }
