--- a/static/css/iphone.css
+++ b/static/css/iphone.css
@@ -60,7 +60,7 @@ td {
     }
 
 .link {
-    height: 36px;
+    height: 48px;
     width: 100px;
 	font-size: 18px;
     text-align: center;
@@ -69,8 +69,9 @@ td {
     }
 
 button {
-    height: 32px;
+    height: 40px;
     width: 160px;
+    border-radius: 8px;
     font-size: 18px;
     color: Black;
     background-color: Gray;
@@ -80,6 +81,7 @@ button {
 input {
     height: 32px;
     width: 60px;
+    border-radius: 8px;
 	font-size: 18px;
     background-color: Gray;
     margin-top: 4px;
