--- a/static/css/iphone.css
+++ b/static/css/iphone.css
@@ -44,9 +44,13 @@ td {
 
 .date {
 	color: LightGray;
-	font-size: 16px;
+	font-size: 20px;
 	text-align: left;
-	margin-left: 12px;
+	margin-left: 4px;
+    }
+
+.group {
+    margin-bottom: 12px;
     }
 
 .tempF {
